Fix a minor layout bug

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -78,9 +78,6 @@ button
     &:hover
       color: rgba(255, 255, 255, 1.0)
 
-// ::input-placeholder
-  // TODO fix the placeholder text
-
 .hidden
   opacity: 0
 
@@ -94,6 +91,7 @@ button
   margin: auto
 
 #recipient-header
+  margin-bottom: 5px
   display: block
   position: relative
   z-index: 1
